k8s/app/ingress.yaml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: go-demo-8
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: go-demo-8.acme.com
    http:
      paths:
      - backend:
          serviceName: go-demo-8
          servicePort: 80
